adding charts